--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -9,4 +9,15 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory app:title="Emulator Management">
+
+        <Preference
+            app:key="emulator_configurations_screen"
+            app:title="Emulator Configurations"
+            app:summary="Define and manage specific emulator setups">
+            <!-- We will launch the Activity via an Intent in the Fragment -->
+        </Preference>
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
