--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,9 +1,24 @@
 <!-- In res/xml/preferences.xml -->
 <PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <Preference
-        app:key="rom_directory_picker_preference_key"
-        app:title="Select ROM Directory"
-        app:summary="Tap to choose your ROMs directory" />
+    <PreferenceCategory app:title="Storage Settings">
+
+        <Preference
+            app:key="rom_directory_picker_preference_key"
+            app:title="ROM Cache Directory"
+            app:summary="Click to select a directory for caching ROMs" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory app:title="Emulator Management">
+
+        <Preference
+            app:key="emulator_configurations_screen"
+            app:title="Emulator Configurations"
+            app:summary="Define and manage specific emulator setups">
+            <!-- We will launch the Activity via an Intent in the Fragment -->
+        </Preference>
+
+    </PreferenceCategory>
 
 </PreferenceScreen>
