Intent flags from list

--- a/app/src/main/res/layout/activity_emulator_settings.xml
+++ b/app/src/main/res/layout/activity_emulator_settings.xml
@@ -20,10 +20,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_margin="16dp"
-        app:srcCompat="@android:drawable/ic_input_add"
-        android:contentDescription="Add Emulator Configuration"
-        android:fitsSystemWindows="true"/>
+        android:layout_margin="@dimen/fab_margin"
+    app:srcCompat="@android:drawable/ic_input_add" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
     
